[package]
name = "lol-inting-yasuo-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.14"
reqwest =  { version = "0.11.11", features = ["json", "blocking", "default-tls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[[bin]]
name = "lol-inting-yasuo-counter"
path = "main.rs"
